#736 - footer mid jumping issue now fixed, style.css and footer.css contain the updated styles

--- a/app_hubstar/app/styles/_footer.css
+++ b/app_hubstar/app/styles/_footer.css
@@ -7,10 +7,11 @@
 #footer{
     background: #333333 url('../images/footerbg.png') repeat-x;
     color: white;
-    position: relative;
+    position: absolute;
     
+    bottom:0;
+    left:0;
     float:left;
-    clear:both;
     width:100%;
 }
 
